MIQ: using suggestion instead of ComboBox